GET_FILENAME_COMPONENT(
	FINGERPRINT_LIST_XML
	${CMAKE_CURRENT_SOURCE_DIR}/fingerprint_list.xml
	REALPATH
	)
GET_FILENAME_COMPONENT(
	FINGERPRINT_LIST_XSD
	${CMAKE_CURRENT_SOURCE_DIR}/fingerprint_list.xsd
	REALPATH
	)

MESSAGE("Adding certificate fingerprints into the fingerprint_list.xml")

EXECUTE_PROCESS(
	COMMAND
	${CMAKE_CURRENT_SOURCE_DIR}/tools/add-fingerprint.sh
	${CMAKE_SOURCE_DIR}/certificates/${PROFILE_TARGET}/${RELMODE}
	${FINGERPRINT_LIST_XML}
	RESULT_VARIABLE ERROR_CODE
)
IF(ERROR_CODE)
	MESSAGE(FATAL_ERROR "Failed to add fingerprints!")
ENDIF()

INSTALL(
	FILES
		${FINGERPRINT_LIST_XML}
		${FINGERPRINT_LIST_XSD}
	DESTINATION share/wrt-engine)
